# Course_ML_hydrological_forecasting

./: 1_ML_introduction.ipynb  README.md  environment.yml  pyproject.toml
notebooks/: 1_ML_introduction.ipynb  2_Satellite_precipitation.ipynb  3_ML_forecasting.ipynb
notebooks/.ipynb_checkpoints/: 1_ML_introduction-checkpoint.ipynb  2_Satellite_precipitation-checkpoint.ipynb  3_ML_forecasting-checkpoint.ipynb
notebooks/data/: Hourly_runoff.xlsx
