[tool.poetry]
name = "ml-hydrological-forecasting"
version = "0.1.0"
description = "Hands-on course"
authors = ["Paul <143228972+paulmunozpauta@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ml_hydrological_forecasting"}]

[tool.poetry.dependencies]
python = "3.7.16"
scikit-learn = "1.0.2"
numpy = "^1.21.5"
pandas = "^1.3.5"
matplotlib = "^3.5.3"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
