[tool.poetry]
name = "ml-hydrological-forecasting"
version = "0.1.0"
description = "Hands-on course"
authors = ["Paul <paul.munoz@vub.be"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.7.16"
scikit-learn = "1.0.2"
numpy = "^1.21.5"
pandas = "^1.3.5"
matplotlib = "^3.5.3"
jupyter = "^1.0.0"
seaborn = "^0.11.2"
openpyxl = "^3.0.9"
descartes = "^1.1.0" 
shapely = "^1.8.4"
geopandas = "^0.9.0"
rasterio = "^1.2.10"
rioxarray = "^0.9.1"
xarray = "^0.20.1"
h5py = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
